BARC UAT/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Appointment_End_Date__c</fullName>
        <label>Appointment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Start_Date__c</fullName>
        <label>Appointment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Casualty__c</fullName>
        <label>Casualty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Latitude__c</fullName>
        <label>Completed Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Longitude__c</fullName>
        <label>Completed Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time__c</fullName>
        <label>Due Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Start__c</fullName>
        <label>Early Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_End_Date__c</fullName>
        <label>Interview End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Start_Date__c</fullName>
        <label>Interview Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Start__c</fullName>
        <label>Late Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Operator</label>
        <referenceTo>Local_Operator__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onsite_Latitude__c</fullName>
        <label>Onsite Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Longitude__c</fullName>
        <label>Onsite Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sampling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sampling</label>
        <referenceTo>Sampling__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URN_without_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URN without Visit</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>